--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
+    "rxjs": "^7.3.0",
+    "symbol-sdk": "^1.0.1",
     "typescript": "~4.1.5"
   },
   "scripts": {
