--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "4.0.3",
     "rxjs": "^7.3.0",
     "symbol-sdk": "^1.0.1",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "clipboard-copy": "^4.0.1"
   },
   "scripts": {
     "start": "craco start",
